--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,10 @@ android {
 dependencies {
     apply plugin: 'com.google.gms.google-services'
 
+    implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
-    implementation 'com.google.firebase:firebase-core:9.6.1'
+    implementation 'com.google.firebase:firebase-core'
+    implementation 'com.google.firebase:firebase-auth'
 
     implementation "androidx.navigation:navigation-fragment:2.3.5"
     implementation "androidx.navigation:navigation-ui:2.3.5"
