--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StockWallet" >
         <activity
-            android:name=".RegisterUserActivity"
+            android:name=".Login.RegisterUserActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login.LoginActivity"
             android:exported="true" >
         </activity>
     </application>
