--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation "androidx.work:work-runtime:2.7.1"
+
     implementation group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.15.0'    //for å hente aksjedate fra yahoo finance
     implementation 'com.github.crazzyghost:alphavantage-java:1.5.0'
 
